--- a/privacy-policy-en.html
+++ b/privacy-policy-en.html
@@ -241,17 +241,18 @@
             <div class="hero">
                 <h1><i class="fas fa-shield-alt"></i> Privacy Policy</h1>
                 <p>Complete privacy information for GiftRoulette</p>
-                <p><strong>Last updated:</strong> November 13, 2025</p>
-                <p><strong>Version:</strong> 1.0.0</p>
+                <p><strong>Last updated:</strong> December 3, 2025</p>
+                <p><strong>Version:</strong> 1.0.0-beta.1 (BETA)</p>
+                <p><strong>Platform:</strong> Android (minSdk 21+)</p>
             </div>
         </header>
 
         <main class="content">
             <div class="section">
                 <h2><i class="fas fa-info-circle"></i> 1. Introduction</h2>
-                <p>Your privacy is fundamental to us. This Privacy Policy describes how the <strong>GiftRoulette</strong> app collects, uses, and protects your personal data in compliance with the General Data Protection Regulation (GDPR) EU 2016/679.</p>
+                <p>Your privacy is fundamental to us. This Privacy Policy describes how the <strong>GiftRoulette</strong> app (BETA version for Android) collects, uses, and protects your personal data in compliance with the General Data Protection Regulation (GDPR) EU 2016/679.</p>
                 
-                <p>GiftRoulette is a free application that allows you to organize group gift exchanges in a fun and synchronized way. The app uses Google Firebase Firestore for real-time data management and Google AdMob for displaying advertisements that allow us to offer the service for free.</p>
+                <p>GiftRoulette is a free application for <strong>Android</strong> (minSdk 21 - Android 5.0+) that allows you to organize group gift exchanges in a fun and synchronized way. The app uses Google Firebase Firestore for real-time data management and Google AdMob for displaying advertisements that allow us to offer the service for free.</p>
                 
                 <div class="warning-box">
                     <i class="fas fa-info-circle icon"></i>
