--- a/privacy-policy-it.html
+++ b/privacy-policy-it.html
@@ -381,7 +381,8 @@
                     
                     <div class="info-card">
                         <h4>Collection: "duos"</h4>
-                        <p><strong>Contenuto:</strong> Documento per ogni coppia Duo con codice, liste desideri di entrambi gli utenti<br>
+                        <p><strong>Contenuto:</strong> Documento per ogni coppia Duo con codice e metadati<br>
+                        <strong>Dati utente:</strong> Liste desideri e storico estrazioni salvati separatamente per garantire privacy<br>
                         <strong>Persistenza:</strong> Permanente fino a cancellazione manuale<br>
                         <strong>Accesso:</strong> Solo tramite codice univoco a 8 caratteri</p>
                     </div>
